--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <title>Celsius to Fahrenheit</title>
 </head>
 <body>
-    
+    <main>
+        <form action="">
+            <label for="celsius">Celsius: </label> <br><br>
+            <input type="number" id="celsius" value="0"> <br><br>
+            <label for="fahrenheit">Fahrenheit: </label> <br><br>
+            <input type="number" id="fahrenheit" value="32">
+        </form>
+    </main>
 </body>
 </html>
