link the JS file

--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
             <input type="number" id="fahrenheit" value="32">
         </form>
     </main>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
